fix overflow

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -125,7 +125,7 @@
 
 /* 48em = 768px */
 
-@media (min-width: 48em) {
+@media (min-width: 70em) {
   .header li {
     float: left;
   }
@@ -139,10 +139,5 @@
   }
   .header .menu-icon {
     display: none;
-  }
-}
-@media (max-width: 960px) and (min-width: 768px) {
-  .header {
-    font-size: 12px;
   }
 }
